syntax = "proto3";

package proto;

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserRequest {
  int32 id = 1;
}

service UserService {
  rpc FindUserByID(UserRequest) returns (UserResponse) {}
}